[package]
name = "qcd"
description = "Quickly change directory on the command line"
readme = "README.md"
authors = ["Claas Bontus"]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClaasBontus/qcd_rs"
homepage = "https://github.com/ClaasBontus/qcd_rs"
keywords = ["linux", "command-line", "utility", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "qcd_rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
path-absolutize = "3.1"
rusqlite = { version = "0.29", features = ["bundled"] }
simple-home-dir = "0.1.4"

[dev-dependencies]
serial_test = "2.0"
